--- a/myapp/templates/classboard.html
+++ b/myapp/templates/classboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-<!DOCTYPE html>
+{% block contenido %}
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,9 +11,10 @@
     </head>
     <body>
         
-        <h1>Panda Particular</h1>
+        <h1>Classboard</h1>
         <p>lorem ipsum di amet </p>
         
         <script src="" async defer></script>
     </body>
 </html>
+{% endblock contenido %}
