--- a/myapp/templates/clipboard.html
+++ b/myapp/templates/clipboard.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block contenido %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,9 +12,10 @@
     </head>
     <body>
         
-        <h1>Panda Particular</h1>
+        <h1>Clipboard</h1>
         <p>lorem ipsum di amet </p>
         
         <script src="" async defer></script>
     </body>
 </html>
+{% endblock contenido %}
