--- a/myapp/static/styles/menu.css
+++ b/myapp/static/styles/menu.css
@@ -48,3 +48,25 @@ a:link, :visited, :active{
     width: 85vw;
     height: 100vh;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #f4cc04 #141c24;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #141c24;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #f4cc04;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
